manifest/timeseries/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeseries
spec:
  selector:
    matchLabels:
      app: timeseries
  template:
    metadata:
      labels:
        app: timeseries
    spec:
      containers:
      - name: envoy
        image: envoy-repo:latest
        volumeMounts:
        - name: envoy
          mountPath: /etc/envoy
        command: ["envoy", "-c", "/etc/envoy/envoy.yaml", "--service-cluster", "timeseries", "--service-node", "timeseries"]
        ports:
        - name: envoy
          containerPort: 15001
        - name: envoy-admin
          containerPort: 10001
      - name: app
        image: app-repo:tag
        ports:
        - containerPort: 8080
        command:
        - /usr/local/bin/run.sh
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
          initialDelaySeconds: 5
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
          initialDelaySeconds: 15
        volumeMounts:
          - name: run-sh
            mountPath: /usr/local/bin
      volumes:
      - name: envoy
        configMap:
          name: envoy-timeseries
      - name: run-sh
        configMap:
          name: timeseries-sh
          defaultMode: 0755
