manifest/timeseries/base/envoy.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-timeseries
data:
  envoy.yaml: |
    admin:
      access_log_path: /dev/null
      address:
        socket_address: { address: 127.0.0.1, port_value: 9901 }
    static_resources:
      listeners:
      - address:
          socket_address: { address: 0.0.0.0, port_value: 15001 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              tracing:
                provider:
                  name: envoy.tracers.zipkin
                  typed_config:
                    "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                    collector_cluster: zipkin
                    collector_endpoint: "/api/v2/spans"
                    shared_span_context: false
                    collector_endpoint_version: HTTP_JSON
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: service
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route: { cluster: timeseries }
              access_log:
              - name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /dev/stdout
              http_filters:
              - name: envoy.filters.http.router
      clusters:
      - name: timeseries
        connect_timeout: 0.25s
        type: STATIC
        lb_policy: ROUND_ROBIN
        http2_protocol_options: {}
        load_assignment:
          cluster_name: timeseries
          endpoints:
            lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 8080
      - name: zipkin
        connect_timeout: 1s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: zipkin
          endpoints:
            lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: zipkin.pantogram-system.svc.cluster.local
                    port_value: 9411
