manifest/timeseries/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeseries
spec:
  clusterIP: None
  selector:
    app: timeseries
  ports:
  - name: grpc
    port: 15001
    targetPort: 15001
    protocol: TCP
